--- a/templates/header.html.twig
+++ b/templates/header.html.twig
@@ -1,9 +1,16 @@
 <!-- Récupère le nom de la route courante -->
 {% set current = app.request.attributes.get('_route') %}
 <header data-route-name="{{ current }}">
-    <nav class="navbar navbar-expand-lg navbar-light bg-primary bg-gradient navbar-dark">
+    <nav class="navbar navbar-expand-lg bg-primary navbar-dark">
         <div class="container-fluid">
-            <a class="navbar-brand fw-bold" href="{{ path('app_home') }}">Webtrader</a>
+
+            <!-- bouton du menu latéral -->
+            <button id="toggleMenu" class="btn btn-primary" data-bs-toggle="collapse" data-bs-target="#menu">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <!-- bouton du menu latéral -->
+
+            <a class="navbar-brand fw-bold ms-2" href="{{ path('app_home') }}">Webtrader</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
