Ajoute une règle css pour que les cards aient une hauteur uniforme

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -35,12 +35,6 @@
             <ul class="list-unstyled">
                 <li class="d-flex justify-content-between align-items-center">
                     <a href="#" class="d-flex align-items-center text-white text-decoration-none">
-                        <i class="bi bi-gear ms-2 me-2"></i> <!-- Icône à gauche avec espacement -->
-                        <span class="ms-2">paramètres</span> <!-- Label à droite en blanc -->
-                    </a>
-                </li>
-                <li class="d-flex justify-content-between align-items-center">
-                    <a href="#" class="d-flex align-items-center text-white text-decoration-none">
                         <i class="bi bi-speedometer ms-2 me-2"></i>
                         <span class="ms-2">gestion</span>
                     </a>
@@ -49,6 +43,13 @@
                     <a href="#" class="d-flex align-items-center text-white text-decoration-none">
                         <i class="bi bi-bar-chart ms-2 me-2"></i>
                         <span class="ms-2">positions</span>
+                    </a>
+                </li>
+                <li><hr class="dropdown-divider text-light"></li>
+                <li class="d-flex justify-content-between align-items-center">
+                    <a href="#" class="d-flex align-items-center text-white text-decoration-none">
+                        <i class="bi bi-gear ms-2 me-2"></i> <!-- Icône à gauche avec espacement -->
+                        <span class="ms-2">paramètres</span> <!-- Label à droite en blanc -->
                     </a>
                 </li>
             </ul>
