--- a/templates/home/dashboard.html.twig
+++ b/templates/home/dashboard.html.twig
@@ -5,7 +5,7 @@
 {% block body %}
 <div class="row justify-content-center mt-3">
     <div class="col-3">
-        <div class="card bg-success text-light">
+        <div class="card bg-success text-light h-100">
             <div class="card-header">
                 <h5 class="card-title fw-bolder">Positions en attente</h5>
             </div>
@@ -17,7 +17,7 @@
         </div>
     </div>
     <div class="col-3">
-        <div class="card bg-warning text-light">
+        <div class="card bg-warning text-light h-100">
             <div class="card-header">
                 <h5 class="card-title fw-bolder">Positions en cours</h5>
             </div>
@@ -29,7 +29,7 @@
         </div>
     </div>
     <div class="col-3">
-        <div class="card bg-danger text-light">
+        <div class="card bg-danger text-light h-100">
             <div class="card-header">
                 <h5 class="card-title fw-bolder">Positions clôturées</h5>
             </div>
@@ -41,7 +41,7 @@
         </div>
     </div>
 </div>
-<div class="row justify-content-center">
+<div class="row justify-content-center mb-3">
     <div class="col-5 mt-3">
         <div class="custom-table text-center p-1">cotations du CAC40</div>
         <table id="data" class="table-bordered table-striped table-hover table-secondary">
@@ -79,7 +79,7 @@
             </tfoot>
         </table>
     </div>
-    <div class="col-5 mt-3">
+    <div class="col-4 mt-3">
         <div class="card chart_card">
             <div class="card-header custom-table text-center p-1">Graphique du Cac</div>
             <div class="card-body">
