--- a/templates/footer.html.twig
+++ b/templates/footer.html.twig
@@ -1,4 +1,4 @@
 <!-- Footer-->
-<footer class="py-5 bg-primary bg-gradient">
+<footer class="py-5">
     <div><p class="text-center text-white">Copyright &copy; Mickaël Bula 2022</p></div>
 </footer>
