--- a/templates/home/dashboard.html.twig
+++ b/templates/home/dashboard.html.twig
@@ -17,7 +17,7 @@
         </div>
     </div>
     <div class="col-3">
-        <div class="card bg-warning text-light h-100">
+        <div class="card bg-orange text-light h-100">
             <div class="card-header">
                 <h5 class="card-title fw-bolder">Positions en cours</h5>
             </div>
@@ -44,7 +44,7 @@
 <div class="row justify-content-center mb-3">
     <div class="col-5 mt-3">
         <div class="custom-table text-center p-1">cotations du CAC40</div>
-        <table id="data" class="table-bordered table-striped table-hover table-secondary">
+        <table id="data" class="table-bordered table-striped table-hover">
             <thead>
             <tr>
                 <th scope="col" class="text-center">Date</th>
