--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -27,29 +27,29 @@
             {{ encore_entry_script_tags('app') }}
         {% endblock %}
     </head>
-    <body>
+    <body data-theme="{{ theme }}">
         {% include 'header.html.twig' %}
 
         <!-- menu latéral -->
-        <div id="menu" class="bg-primary collapse">
+        <div id="menu" class="collapse">
             <ul class="list-unstyled">
                 <li class="d-flex justify-content-between align-items-center">
                     <a href="#" class="d-flex align-items-center text-white text-decoration-none">
                         <i class="bi bi-speedometer ms-2 me-2"></i>
-                        <span class="ms-2">gestion</span>
+                        <span class="ms-2">Gestion</span>
                     </a>
                 </li>
                 <li class="d-flex justify-content-between align-items-center">
                     <a href="#" class="d-flex align-items-center text-white text-decoration-none">
                         <i class="bi bi-bar-chart ms-2 me-2"></i>
-                        <span class="ms-2">positions</span>
+                        <span class="ms-2">Positions</span>
                     </a>
                 </li>
-                <li><hr class="dropdown-divider text-light"></li>
+                <li><hr class="dropdown-divider ms-2 me-2 text-light"></li>
                 <li class="d-flex justify-content-between align-items-center">
                     <a href="#" class="d-flex align-items-center text-white text-decoration-none">
                         <i class="bi bi-gear ms-2 me-2"></i> <!-- Icône à gauche avec espacement -->
-                        <span class="ms-2">paramètres</span> <!-- Label à droite en blanc -->
+                        <span class="ms-2">Paramètres</span> <!-- Label à droite en blanc -->
                     </a>
                 </li>
             </ul>
