--- a/templates/header.html.twig
+++ b/templates/header.html.twig
@@ -1,7 +1,7 @@
 <!-- Récupère le nom de la route courante -->
 {% set current = app.request.attributes.get('_route') %}
 <header data-route-name="{{ current }}">
-    <nav class="navbar navbar-expand-lg bg-primary navbar-dark">
+    <nav class="navbar navbar-expand-lg navbar-dark">
         <div class="container-fluid">
 
             <!-- bouton du menu latéral -->
@@ -11,7 +11,7 @@
             <!-- bouton du menu latéral -->
 
             <a class="navbar-brand fw-bold ms-2" href="{{ path('app_home') }}">Webtrader</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -36,6 +36,43 @@
                         </ul>
                     </li>
                 </ul>
+                <!-- bouton dark mode -->
+                <button
+                        class="theme-toggle"
+                        type="button"
+                        title="Toggle theme"
+                        aria-label="Toggle theme"
+                        id="switchMode"
+                >
+                    <svg
+                            xmlns="http://www.w3.org/2000/svg"
+                            aria-hidden="true"
+                            width="2em"
+                            height="2em"
+                            fill="currentColor"
+                            stroke-linecap="round"
+                            class="theme-toggle__classic"
+                            viewBox="0 0 32 32"
+                    >
+                        <clipPath id="theme-toggle__classic__cutout">
+                            <path d="M0-5h30a1 1 0 0 0 9 13v24H0Z"></path>
+                        </clipPath>
+                        <g clip-path="url(#theme-toggle__classic__cutout)">
+                            <circle cx="16" cy="16" r="9.34"></circle>
+                            <g stroke="currentColor" stroke-width="1.5">
+                                <path d="M16 5.5v-4"></path>
+                                <path d="M16 30.5v-4"></path>
+                                <path d="M1.5 16h4"></path>
+                                <path d="M26.5 16h4"></path>
+                                <path d="m23.4 8.6 2.8-2.8"></path>
+                                <path d="m5.7 26.3 2.9-2.9"></path>
+                                <path d="m5.8 5.8 2.8 2.8"></path>
+                                <path d="m23.4 23.4 2.9 2.9"></path>
+                            </g>
+                        </g>
+                    </svg>
+                </button>
+                <!-- bouton dark mode -->
             </div>
         </div>
     </nav>
