--- a/assets/styles/dark-mode.scss
+++ b/assets/styles/dark-mode.scss
@@ -24,15 +24,18 @@
     transition: 350ms ease-in-out;
   }
   .dataTables_wrapper {
-    background-color: #0e0e0e;
-    color: #a6adc9;
+    background-color: #343E59;
+    color: #A6BDB5;
     border: 1px solid #282626;
     transition: 350ms ease-in-out;
   }
+  /*
   .chart_card {
-    background-color: #0e0e0e;
+    background-color: #343E59;
+    color: #A6BDB5;
     transition: 350ms ease-in-out;
   }
+   */
   #menu {
     background-color: var(--bg-primary);
   }
