--- a/assets/styles/dark-mode.scss
+++ b/assets/styles/dark-mode.scss
@@ -24,10 +24,13 @@
     transition: 350ms ease-in-out;
   }
   .dataTables_wrapper {
-    background-color: #343E59;
-    color: #A6BDB5;
-    border: 1px solid #282626;
+    background-color: #424242;
+    color: #F3F7F8;
+    border: 1px solid #F3F7F8;
     transition: 350ms ease-in-out;
+  }
+  .chart_card .card-body {
+    background-color: #424242;
   }
   /*
   .chart_card {
